--- a/css/styles.css
+++ b/css/styles.css
@@ -408,14 +408,16 @@ display: flex;
 .team-item {
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
-    flex-basis: calc((100% - 3 * 24px) / 4);
+     flex-basis: calc((100% - 3 * 24px) / 4); 
+    
     box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+
+    }
 
 .team-image {
-
+width: 100%;
 }
 
 .team-subtitle {
@@ -626,7 +628,9 @@ width: 288px;
 }
 
 .footer-cover-wrap {
-margin-right: 80px;
+/*.footer-cover-wrap */
+
+justify-content: center;
 }
 
 .footer-text-icon {
@@ -1144,6 +1148,12 @@ flex-direction: row;
     justify-content: center;
 }
 
+ .team-item {
+width: 264px;
+} 
+
+
+
 /* .team-container {
 
 width: 584px;
@@ -1174,17 +1184,20 @@ width: 356px;
         padding-bottom: 96px;
 }
 .container-footer {
-    width: 768px;
-    flex-direction: row;
-        flex-wrap: wrap;
-        text-align: start;
-        align-items: baseline;
-        justify-content: unset;
-        max-width: 584px;
-        gap: 72px 24px;
-        display: flex;
-            align-items: baseline;
+flex-direction: row;
+    flex-wrap: wrap;
+    text-align: start;
+    align-items: baseline;
+    justify-content: unset;
+    max-width: 584px;
+    gap: 72px 24px;
 }
+
+ /* .footer-logo-wrap {
+    display: flex;
+    max-width: 264px;
+    margin-right: auto;
+}  */
 
 .footer-logo {
     display: flex;
@@ -1195,14 +1208,18 @@ align-self: self-start;
 }
 
 .footer-btn {
-    flex-direction: column;
-        justify-content: center;
-        align-items: start;
+    
 }
 
 .footer-wrap {
+flex-direction: column;
+    justify-content: center;
+    align-items: start;
+}
+
+.footer-form {
     display: flex;
-        flex-direction: row;
+    flex-direction: row;
 }
 
 }
@@ -1338,4 +1355,61 @@ padding-bottom: 120px;
 
 
 /* -------------------- */
+/* -----------Footer------ */
+.container-footer {
+     width: 1158px;
+        padding-left: 15px;
+        padding-right: 15px; 
+    display: flex;
+        align-items: baseline;
+        flex-wrap: nowrap;
+        gap: unset;
+}
+
+.footer-cover-wrap {
+        margin-left: 120px;
+}
+
+.footer-wrap {
+    margin-left: 80px;
+        min-width: 453px;
+        height: 80px;
+}
+ 
+.footer-logo {
+    display: block;
+        display: inline-block;
+}
+
+.footer-text {
+    max-width: 264px;
+}
+
+.icon-list-footer {
+display: flex;
+gap: 16px; 
+}
+
+.icon-link-footer {
+    margin-bottom: 32px;
+}
+
+.footer-wrap {
+    margin-left: auto;
+}
+
+.footer-form {
+     display: flex;
+    gap: 24px;
+}
+
+.footer-input {
+    width: 264px;
+}
+
+.footer-input::placeholder {
+    padding-left: 16px;
+} 
+
+/* ----------------- */
 }
