--- a/css/styles.css
+++ b/css/styles.css
@@ -127,24 +127,24 @@ display: none;
     margin-left: auto;
     margin-bottom: 24px; 
     border-radius: 100%;
-        fill: #e7e9fc;
+        fill: none;
         stroke-width: 1px;
         stroke: #2e2f42;
         padding: 0;
         cursor: pointer;
         border: 1px solid rgba(0, 0, 0, 0.10);
-        background-color: #e7e9fc;
+        background-color: #fff;
         display: flex;
         justify-content: center;
         align-items: center;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+width: 24px;
+height: 24px;    
 }
 
-
-
-
-
-
+.icon-x-x {
+    fill: #2e2f42;
+}
 
 .mob-list {}
 
@@ -179,7 +179,7 @@ margin-bottom: 40px;
 color: #434455;
     display: flex;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+font-style: normal;
 }
 
 .mob-logo-part {
@@ -369,8 +369,13 @@ font-weight: 500;
 .team-container {
 padding: 32px 0;
 text-align: center;
-    width: 296px;
+    
 }
+
+.team-team {
+width: 296px;
+}
+
 .team {
 background-color: #F4F4FD;
 /* padding-top: 120px;
@@ -408,7 +413,7 @@ display: flex;
 .team-item {
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
-     flex-basis: calc((100% - 3 * 24px) / 4); 
+     /* flex-basis: calc((100% - 3 * 24px) / 4);  */
     
     box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
@@ -790,8 +795,10 @@ border-radius: 4px;
 }
 
 .modal {
-width: 408px;
-min-height: 584px;
+/* width: 408px;
+min-height: 584px; */
+width: 288px;
+    height: 623px;
 background: #fcfcfc;
 border-radius: 4px;
 position: absolute;
@@ -803,9 +810,12 @@ box-shadow:0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 padding-top: 72px;
-    padding-right: 24px;
+    /* padding-right: 24px;
     padding-left: 24px;
-    padding-bottom: 24px;
+    padding-bottom: 24px; */
+    padding-right: 16px;
+        padding-left: 16px;
+        padding-bottom: 16px;
 }
 
 .modal-open-btn {
@@ -842,6 +852,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-title {
+    font-family: "Roboto", sans-serif;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
@@ -871,6 +882,8 @@ margin-bottom: 8px;
 
 .modal-label {
     display: block;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
     margin-bottom: 4px;
     font-size: 12px;
 line-height:1.17;
@@ -890,6 +903,7 @@ line-height:1.17;
         background-color: transparent;
 padding-left: 38px;
 outline: transparent;
+line-height: 1.17;
 transition:border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -917,6 +931,7 @@ fill: #4d5ae5;
     position: absolute;
     left: 16px;
     top: 50%;
+    fill: #2e2f42;
     transform: translateY(-50%);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -925,10 +940,13 @@ fill: #4d5ae5;
     width: 100%;
         border: 1px solid rgba(46, 47, 66, 0.4);
         border-radius: 4px;
+        width: 100%;
         height: 120px;
         padding: 8px 16px;
         font-size: 12px;
         line-height: 1.17;
+        font-weight: 400;
+        opacity: 0.5;
         letter-spacing: 0.04em;
         color: rgba(46, 47, 66, 0.4);
         background-color: transparent;
@@ -947,8 +965,10 @@ border-color: #4D5AE5;
         line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
-        align-items: center;
-        gap: 8px;
+        display: flex;
+            align-items: center;
+        /* align-items: center;
+        gap: 8px; */
 }
 
 .modal-span {
@@ -963,7 +983,10 @@ border: 1px solid rgba(46, 47, 66, 0.4);
 display: inline-flex;
 align-items: center;
 justify-content: center;
-fill: transparent;
+fill: transparent;  
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-right: 8px;
+    flex-shrink: 0;
 }
 
 .modal-check:checked + .check-text span {
@@ -977,14 +1000,17 @@ background-color: #404bbf;
         text-decoration: underline;
         text-decoration-skip-ink: none;
         color: #4d5ae5;
+        padding-left: 2px;
 }
 
 .modal-btn {
-display: flex;
+/* display: flex;
 align-items: center;
 justify-content: center;
 flex-direction: row;
-gap: 10px;
+gap: 10px; */
+display: block;
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 border-radius: 4px;
 padding: 16px 32px;
 display: block;
@@ -996,8 +1022,8 @@ font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
     text-align: center;
-    color: #fff;
-    margin: auto;
+    color: #ffffff;
+    margin: 0 auto;
     margin-top: 28px;
     cursor: pointer;
     border: none;
@@ -1141,6 +1167,7 @@ height: 4px;
 /* ----------------3---------- */
 
 
+
 .team-list {
 flex-direction: row;
     flex-wrap: wrap;
@@ -1150,14 +1177,11 @@ flex-direction: row;
 
  .team-item {
 width: 264px;
+    
+width: calc((100% - 24px) / 2);
+height: auto;
 } 
 
-
-
-/* .team-container {
-
-width: 584px;
-} */
 
 
 /* -------------------- */
@@ -1202,6 +1226,7 @@ flex-direction: row;
 .footer-logo {
     display: flex;
         justify-content: start;
+      
 }
 .footer-text-icon {
 align-self: self-start;
@@ -1221,7 +1246,23 @@ flex-direction: column;
     display: flex;
     flex-direction: row;
 }
+/* -------------- */
+/* -----------Modal------------- */
+.modal {
+    width: 408px;
+        height: 584px;
+        padding-right: 24px;
+        padding-left: 24px;
+}
+.check-text {
+    align-items: center;
+        margin: 8px;
+        white-space: nowrap;
+}
 
+
+
+/* ------------- */
 }
 
 
@@ -1352,12 +1393,14 @@ padding-bottom: 120px;
 padding-top: 120px;
 padding-bottom: 120px; 
 }
-
+.team-item {
+flex-basis: calc((100% - 3 * 24px) / 4);
+}
 
 /* -------------------- */
 /* -----------Footer------ */
 .container-footer {
-     width: 1158px;
+    max-width: 1158px;
         padding-left: 15px;
         padding-right: 15px; 
     display: flex;
